# game-launcher

./: build_deploy.sh  note.md  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: backend.yaml  build.yaml  release.yaml
backend/: .env  .gitignore  composer.json  package-lock.json  package.json  serverless.yml
backend/config/: services.yaml
backend/src/Controller/: StatusController.php  UpdateController.php
backend/src/EventListener/: JsonExceptionListener.php
desktop-app/: package.json
desktop-app/src/: App.vue  main.ts
desktop-app/src-tauri/: tauri.conf.json
desktop-app/src/components/: FirstRun.vue
src/: App.vue  main.ts  router.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/: FirstRun.vue
src/services/: GameManifestService.ts  SettingService.ts
src/types/: Manifest.ts
src/views/: FirstRunView.vue  GameDetailView.vue
